<resources>
    <string name="app_name">Weather App</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="city_country">City, Country</string>
    <string name="now">Now</string>
    <string name="now_degree">Now Degree</string>
    <string name="weather_condition">Weather condition</string>
    <string name="today_max">Today</string>
    <string name="today_max_deg">Today Max Deg</string>
    <string name="max">Max</string>
    <string name="today_min">Today</string>
    <string name="today_min_deg">Today Min Deg</string>
    <string name="min">Min</string>
    <string name="wind">Wind</string>
    <string name="speed">Speed</string>
    <string name="humidity">Humidity</string>
    <string name="humidity_percent">Humidity Percent</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunrise_time">Sunrise Time</string>
    <string name="pressure">Pressure</string>
    <string name="index">Index</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="cloudiness_percent">Cloudiness Percent</string>
    <string name="sunset">Sunset</string>
    <string name="sunset_time">Sunset Time</string>
</resources>
